[tool.poetry]
name = "heath"
version = "0.1.12"
description = ""
authors = ["Jonatan Skogsfors <jonatan@skogsfors.net>"]

packages = [
    { include = "heath", from="src" }
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.3"
tabulate = "^0.8.9"
gitpython = "^3.1.41"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = ">=22.6.0"

[tool.poetry.scripts]
heath = "heath.heath:main"

[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
